<resources>
    <string name="app_name">ProductionManagementAndroid</string>
    <string name="login_title">Login</string>
    <string name="username_hint">ユーザー名</string>
    <string name="password_hint">パスワード</string>
    <string name="login_button">ログイン</string>
    <string name="login_button_desc">ログインボタン</string>
    <string name="title_activity_main_menu">メインメニュー</string>
    <string name="receive_title">入庫処理</string>
    <string name="logout">ログアウト</string>
    <string name="product_serial">製品シリアル</string>
    <string name="product_name">製品名</string>
    <string name="production_quantity">生産指示数量</string>
    <string name="order_number">オーダ番号</string>
    <string name="shelf">棚</string>
    <string name="receive_quantity">入庫数量</string>
    <string name="shelf_verification">棚照合</string>
    <string name="receive">入庫</string>
    <string name="cancel">キャンセル</string>
    <string name="close_app">アプリを閉じる</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="select_area_button">決定</string>
    <string name="login_check_button">ログインチェック</string>

    <!-- activity_receive.xml用 -->
    <string name="product_serial_hint">製品シリアルを入力</string>
    <string name="receive_quantity_hint">入庫数量を入力</string>
    <string name="shelf_verification_hint">棚を入力</string>
</resources>