<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/login_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:autofillHints="username"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxWidth="500dp"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:autofillHints="password"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxWidth="500dp"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:maxWidth="500dp"
        android:layout_weight="0"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />
</LinearLayout>